--- a/index.html
+++ b/index.html
@@ -470,39 +470,77 @@
           <div class="custom-accordion" id="accordion_1">
             <div class="accordion-item">
               <h2 class="mb-0">
-                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">How to download and register?</button>
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Are your t-shirts ethically made?
+                </button>
               </h2>
   
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion_1">
                 <div class="accordion-body">
-                  Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                  Absolutely. We prioritize ethical manufacturing practices, 
+                  ensuring fair wages and safe working conditions for all involved in the production process. 
+                  We actively support initiatives aimed at promoting sustainable agriculture, reducing carbon emissions, 
+                  and empowering communities in need through our partnerships and donations.
                 </div>
               </div>
             </div> <!-- .accordion-item -->
   
             <div class="accordion-item">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How to create your paypal account?</button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Do your t-shirts shrink after washing?
+                </button>
               </h2>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion_1">
                 <div class="accordion-body">
-                  A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                  our t-shirts undergo a preshrinking process during manufacturing 
+                  to minimize further shrinkage after washing. However, minimal shrinkage is normal 
+                  with cotton garments. To minimize shrinkage, follow our care instructions and avoid high-heat drying.
                 </div>
               </div>
             </div> <!-- .accordion-item -->
             <div class="accordion-item">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How to link your paypal and bank account?</button>
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Can I customize my t-shirt with designs or logos?
+                </button>
               </h2>
-  
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
                 <div class="accordion-body">
-                  When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.
+                  Currently, we offer a selection of pre-designed t-shirts. 
+                  However, stay tuned for future updates on customization options!
                 </div>
               </div>
-  
             </div> <!-- .accordion-item -->
-  
+            <div class="accordion-item">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Do you offer international shipping?
+                </button>
+              </h2>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
+                <div class="accordion-body">
+                  Yes, we ship worldwide. Shipping rates and delivery 
+                  times may vary depending on your location. For any inquiries or assistance, feel free to reach out to our 
+                  dedicated customer support team at contact@solos.life. We're here to help!
+                </div>
+              </div>
+            </div> <!-- .accordion-item -->
+            <div class="accordion-item">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  What is your return policy?
+                </button>
+              </h2>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
+                <div class="accordion-body">
+                  We want you to love your t-shirt. If you're not satisfied with your purchase, 
+                  you can return it within 30 days for a full refund or exchange. 
+                  For any inquiries or assistance, feel free to reach out to our 
+                  dedicated customer support team at contact@solos.life. We're here to help!
+                </div>
+              </div>
+            </div> <!-- .accordion-item -->
           </div>
   
         </div>
