--- a/index.html
+++ b/index.html
@@ -514,11 +514,11 @@
             </div> <!-- .accordion-item -->
             <div class="accordion-item">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseThree">
                   Do you offer international shipping?
                 </button>
               </h2>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
+              <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordion_1">
                 <div class="accordion-body">
                   Yes, we ship worldwide. Shipping rates and delivery 
                   times may vary depending on your location. For any inquiries or assistance, feel free to reach out to our 
@@ -528,11 +528,11 @@
             </div> <!-- .accordion-item -->
             <div class="accordion-item">
               <h2 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseThree">
                   What is your return policy?
                 </button>
               </h2>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
+              <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordion_1">
                 <div class="accordion-body">
                   We want you to love your t-shirt. If you're not satisfied with your purchase, 
                   you can return it within 30 days for a full refund or exchange. 
