--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>SOLOS.Life :: lifestyle products for indviduals</title>
+  <title>SOLOS.Life :: Elevating Your Lifestyle with Premium Cotton Apparel, Sleepwear and Bedding</title>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
@@ -720,12 +720,12 @@
             margin-right: 9px;
             font-size: 12px;">Follow Us</p>
             <ul class="list-unstyled social">
-              <li><a href="#"><span class="icon-instagram"></span></a></li>
-              <li><a href="#"><span class="icon-twitter"></span></a></li>
+              <li><a href="https://www.instagram.com/solos.life" target="_blank"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://x.com/solos_life" target="_blank"><span class="icon-twitter"></span></a></li>
               <li><a href="#"><span class="icon-facebook"></span></a></li>
               <li><a href="#"><span class="icon-linkedin"></span></a></li>
               <li><a href="#"><span class="icon-pinterest"></span></a></li>
-              <li><a href="#"><span class="icon-dribbble"></span></a></li>
+              <li><a href="https://dribbble.com/solos_life" target="_blank"><span class="icon-dribbble"></span></a></li>
             </ul>
           </div>
         </div>
