--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PB1CDHSQYM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PB1CDHSQYM');
+  </script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Solos.life">
@@ -499,7 +509,7 @@
         <div class="col-lg-4 ml-auto"  data-aos="fade-up" data-aos-delay="200">
           <div class="quick-contact">
             <h3 class="h5 mb-4">Contact Info</h3>
-            <address class="text-black d-flex"><span class="mt-1 icon-room mr-2"></span><span>PO Box 3116, Rowville, Victoria 3910</span></address>
+            <address class="text-black d-flex"><span class="mt-1 icon-room mr-2"></span><span>PO Box 3116, Rowville, Victoria 3178</span></address>
             <ul class="list-unstyled ul-links mb-4">
               <li><a href="tel://11234567890" class="d-flex"><span class="mt-1 icon-phone mr-2"></span><span>+61-456-7890</span></a></li>
 
@@ -530,7 +540,7 @@
             <ul class="list-unstyled social">
               <li><a href="https://www.instagram.com/solos.life" target="_blank"><span class="icon-instagram"></span></a></li>
               <li><a href="https://x.com/solos_life" target="_blank"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=61561308201576" target="_blank"><span class="icon-facebook"></span></a></li>
               <li><a href="#"><span class="icon-linkedin"></span></a></li>
               <li><a href="#"><span class="icon-pinterest"></span></a></li>
               <li><a href="https://dribbble.com/solos_life" target="_blank"><span class="icon-dribbble"></span></a></li>
