--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div> <!-- /.container -->
   </div> <!-- /.solos_co-section -->
 
-
+  <!--
   <div class="solos_co-section bg-light" id="testimonials-section">
     <div class="container">
       <div class="row mb-5">
@@ -260,7 +260,7 @@
 
                   </div>
                 </div>
-              </div> <!-- /.solos_co-testimonial -->
+              </div> 
             </div>
 
             <div class="item">
@@ -280,7 +280,7 @@
 
                   </div>
                 </div>
-              </div> <!-- /.solos_co-testimonial -->
+              </div> 
             </div>
 
             <div class="item">
@@ -300,15 +300,14 @@
 
                   </div>
                 </div>
-              </div> <!-- /.solos_co-testimonial -->
+              </div> 
             </div>
           </div>
         </div>
-      </div> <!-- /.row -->    
-    </div> <!-- /.container -->  
-  </div> <!-- /.solos_co-section -->
-  <!--End About -->
-
+      </div>   
+    </div> 
+  </div> 
+  -->
   
 
 
